[package]

name = "ixlist"
version = "0.1.0"
authors = ["bluss"]
license = "MIT/Apache-2.0"

description = "The “ixlist” is a linked list in a vector, or if you want a list in a pond or an arena-allocated linked index-chasing fest. Implements a queue interface and a cursor."

documentation = "https://docs.rs/ixlist/"
repository = "https://github.com/bluss/ixlist"

keywords = ["data-structure", "linked-list", "indexes", "are-you-serious", "nah"]
categories = ["data-structures"]

[dev-dependencies]

rand = "0.3"
itertools = "0.6.2"
bencher = "0.1"

[[bench]]
name = "bench1"
harness = false

[package.metadata.release]
no-dev-version = true

